--- a/index.html
+++ b/index.html
@@ -11,37 +11,38 @@
 
 <div class="container">
 
-	<div class="row">
-		<div class="col-lg-6 col-lg-offset-3">
+	<div>
 			<h3>輸入地址批次轉換經緯度 經緯度分開的小工具</h3>
 			<hr/>
-		</div>
 	</div>
 
 		<div class="row">
 		<div class="col-lg-6">
-			<p>1. 請輸入地址，一行就輸入一個地址</p>
+			</br>
+			<h4>1. 請輸入地址，一行就輸入一個地址</h4>
 			<p>
 				<textarea name="S1" id="source">台北市信義區市府路1號</textarea>
 			</p>
-			<p>2. 請選擇輸出要不要加入地址?  <input type="checkbox" id="c" name="c" value="ON">加上</p>
-			<p>3. 點選
+			<h4>2. 請選擇輸出要不要加入地址? &nbsp <input type="checkbox" id="c" name="c" value="ON">&nbsp&nbsp加上</h4>
+			<h4>3. 點選&nbsp
 				<button type="button" class="btn " onclick="trans()">轉經度</button>
+				&nbsp
 				<button type="button" class="btn " onclick="trans1()">轉緯度</button>
-			</p>
+			</h4>
 		</div>
 
 
 		<div class="col-lg-6">
+			</br>
 			<div>
-				<p>4. 地址轉換經度 (longitude) 結果如下</p>
+				<h4>4. 地址轉換經度 (longitude) 結果如下</h4>
 				<p>
 					<textarea name="S2" id="target"></textarea>
 				</p>
 			</div>
 
 			<div>
-				<p>5. 地址轉換緯度 (latitude) 結果如下</p>
+				<h4>5. 地址轉換緯度 (latitude) 結果如下</h4>
 				<p>
 					<textarea name="S2" id="target1"></textarea>
 				</p>
@@ -51,17 +52,17 @@
 
 
 
-		<div class="col-lg-6 col-lg-offset-3">
-			<hr/>
-			<p>
-				本工具由 <a href="http://uhooamber.com/">李小淮前輩</a> 開發，因為臨時需要單獨的轉換，故參考他的程式碼作出單獨分開的轉換工具使用一下，真的非常謝謝他！
-			</p>
-		</div>
+
 
 
 	</div>
 
-
+	<div>
+		<hr/>
+		<h5>
+			本工具由 <a href="http://uhooamber.com/">李小淮前輩</a> 開發，因為臨時需要單獨的轉換，故參考他的程式碼作出單獨分開的轉換工具使用一下，真的非常謝謝他！
+		</h5>
+	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
