--- a/index.html
+++ b/index.html
@@ -23,8 +23,28 @@
 		<div class="col-lg-6">
 			</br>
 			<h4>1. 請輸入地址，一行就輸入一個地址</h4>
-				<input id="htest" type="text" value="請輸入來玩玩看ajax"></input>
-				<textarea name="S1" id="source">台北市信義區市府路1號</textarea>
+
+			<!--測試看看ajax吧-->
+				<!--<input id="htest" type="text" value="請輸入來玩玩看ajax"></input>-->
+
+			<!--<script>-->
+				<!--function testCreateXhr(){-->
+					<!--var xhr = createXHR2();-->
+					<!--xhr.open('GET','https://www.facebook.com/',true);-->
+					<!--xhr.setRequestHeader("content-type","applictation/json");-->
+					<!--xhr.send('harry.yang.hello');-->
+					<!--xhr.onreadystatechange=function(e){-->
+
+					<!--}-->
+
+				<!--}-->
+
+			<!--</script>-->
+
+
+			<!--測試看看ajax吧-->
+
+			<textarea name="S1" id="source">台北市信義區市府路1號</textarea>
 			<h4>2. 請選擇輸出要不要加入地址? &nbsp <input type="checkbox" id="c" name="c" value="ON">&nbsp&nbsp加上</h4>
 			<h4>3. 點選&nbsp
 				<button type="button" class="btn " onclick="trans()">轉經度</button>
