--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
+	<meta property="og:image" content="http://5.blog.xuite.net/5/f/7/2/21306907/blog_2193871/txt/37527340/4.jpg"></meta>
 	<title>轉經緯度小工具</title>
 	<link href="css/screen.css" type="text/css" rel="stylesheet">
 	<link href="css/style.css" type="text/css" rel="stylesheet">
