--- a/index.html
+++ b/index.html
@@ -12,84 +12,69 @@
 </head>
 <body>
 
-<div class="container">
-
-	<div>
-			<h2>輸入地址批次轉換經緯度的小工具</h2>
-			<h4>哈利不負責任工具學堂，經緯度分開喲！</h4>
-			<hr/>
-	</div>
-
-		<div class="row">
-		<div class="col-lg-6">
-			</br>
-			<h4>1. 請輸入地址，一行就輸入一個地址</h4>
-
-			<!--測試看看ajax吧-->
-				<!--<input id="htest" type="text" value="請輸入來玩玩看ajax"></input>-->
-
-			<!--<script>-->
-				<!--function testCreateXhr(){-->
-					<!--var xhr = createXHR2();-->
-					<!--xhr.open('GET','https://www.facebook.com/',true);-->
-					<!--xhr.setRequestHeader("content-type","applictation/json");-->
-					<!--xhr.send('harry.yang.hello');-->
-					<!--xhr.onreadystatechange=function(e){-->
-
-					<!--}-->
-
-				<!--}-->
-
-			<!--</script>-->
+    <div class="container">
+        <input type="checkbox" id="a1">
+        <label for="a1">標籤1</label>
+        <label for="a1">標籤2</label>
 
 
-			<!--測試看看ajax吧-->
 
-			<textarea name="S1" id="source">台北市信義區市府路1號</textarea>
-			<h4>2. 請選擇輸出要不要加入地址? &nbsp <input type="checkbox" id="c" name="c" value="ON">&nbsp&nbsp加上</h4>
-			<h4>3. 點選&nbsp
-				<button type="button" class="btn " onclick="trans()">轉經度</button>
-				&nbsp
-				<button type="button" class="btn " onclick="trans1()">轉緯度</button>
-			</h4>
-		</div>
-<script>
+        <div>
+                <h2>輸入地址批次轉換經緯度的小工具</h2>
+                <h4>哈利之不負責任工具學堂，經緯度分開喲！</h4>
+                <hr/>
+            <label for="a1" class="b1" id="abc">標籤3</label>
 
-	document.getElementById('htest').oninput=function(){}
+        </div>
 
-</script>
+            <div class="row">
+            <div class="col-lg-6">
+                </br>
+                <h4>1. 請輸入地址，一行就輸入一個地址</h4>
+                <textarea name="S1" id="source">台北市信義區市府路1號</textarea>
+                <h4>2. 請選擇輸出要不要加入地址? &nbsp
+                    <input type="checkbox" id="c" name="c" value="ON">&nbsp&nbsp加上</h4>
+                <h4>3. 點選&nbsp
+                    <button type="button" class="btn " onclick="trans()">轉經度</button>
+                    &nbsp
+                    <button type="button" class="btn " onclick="trans1()">轉緯度</button>
+                </h4>
+            </div>
+    <script>
 
-		<div class="col-lg-6">
-			</br>
-			<div>
-				<h4>4. 地址轉換經度 (longitude) 結果如下</h4>
+        document.getElementById('htest').oninput=function(){}
 
-					<textarea name="S2" id="target"></textarea>
+    </script>
 
-			</div>
+            <div class="col-lg-6">
+                </br>
+                <div>
+                    <h4>4. 地址轉換經度 (longitude) 結果如下</h4>
 
-			<div>
-				<h4>5. 地址轉換緯度 (latitude) 結果如下</h4>
-					<textarea name="S2" id="target1"></textarea>
-			</div>
+                        <textarea name="S2" id="target"></textarea>
 
-		</div>
+                </div>
 
-	</div>
+                <div>
+                    <h4>5. 地址轉換緯度 (latitude) 結果如下</h4>
+                        <textarea name="S2" id="target1"></textarea>
+                </div>
 
-	<div>
-		<hr/>
-		<h5>
-			本工具由 <a href="http://uhooamber.com/">李小淮前輩</a> 開發，因為臨時需要單獨的轉換，故參考他的程式碼作出單獨分開的轉換工具使用一下，真的非常謝謝他！
-		</h5>
-	</div>
+            </div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-	<script src="function.js"></script>
+        </div>
 
-</div>
+        <div>
+            <hr/>
+            <h5>
+                本工具由 <a href="http://uhooamber.com/">李小淮前輩</a> 開發，因為臨時需要單獨的轉換，故參考他的程式碼作出單獨分開的轉換工具使用一下，真的非常謝謝他！
+            </h5>
+        </div>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+        <script src="function.js"></script>
 
+    </div>
 </body>
 </html>
