--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
 
 </head>
 <body>
-
-    <div class="container">
+ <div class="container">
         <input type="checkbox" id="a1">
-        <label for="a1">標籤1</label>
-        <label for="a1">標籤2</label>
-
-
-
         <div>
                 <h2>輸入地址批次轉換經緯度的小工具</h2>
                 <h4>哈利之不負責任工具學堂，經緯度分開喲！</h4>
@@ -77,4 +71,11 @@
 
     </div>
 </body>
+
+<script>
+    var ele = document.querySelector("p")[0].child();
+    alert(ele);
+
+</script>
+
 </html>
