--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <div class="container">
         <input type="checkbox" id="a1">
         <div>
-                <h2>輸入地址批次轉換經緯度的小工具</h2>
+                <h2>輸入地址批次轉換經緯度的小工具二代</h2>
                 <h4>哈利之不負責任工具學堂，經緯度分開喲！</h4>
                 <hr/>
             <label for="a1" class="b1" id="abc">標籤3</label>
